# coding

./: Makefile  README.md  Readme.md  go.mod  go.sum
.github/workflows/: ci-check.yml
features/: eat.feature
go/bdd-poc/: go.mod
go/bdd-poc/features/: generate.feature
go/bdd-poc/src/calc/: eat.go  interfaces.go
go/bdd-poc/tests/godog_tests/: hello_godog_test.go  main_test.go  scenario_2_test.go
go/design-patterns/: Makefile  README.md  go.mod  go.sum
go/design-patterns/src/builders/: facets.go
go/design-patterns/src/cmd/: main.go
go/design-patterns/src/coding/: chain-of-responsibility.go  find-paths.go  main.go
go/design-patterns/src/construction_patterns/: builders.go  factories.go
go/design-patterns/src/data/: data_frame.go
go/design-patterns/src/leetcode/: medium_sorted_arrays.go
go/design-patterns/src/solid_examples/: 1-single-responsibility.go  3-liskov-substitution.go
go/design-patterns/src/syntax_sugar/: dependency_inversion.go  interface_segregation.go  open_closed.go  single_response.go  uskov_substitution.go
go/design-patterns/tests/: basics_test.go  builders_test.go  data_test.go  find_paths_test.go  leetcode_test.go
go/design-patterns/tests/coding_tests/: data_test.go  find_paths_test.go  leetcode_test.go
go/design-patterns/tests/construction_tests/: builders_test.go
go/design-patterns/tests/godog_tests/: hello_godog_test.go
go/design-patterns/tests/package_tests/: data_test.go
go/design-patterns/tests/syntax_sugar_tests/: basics_test.go
go/gin-poc/: .dockerignore  README.md  go.mod  go.sum
go/gin-poc/src/: main.go
go/gin-poc/src/service/: accounts.go  middleware.go  routers.go  server.go  transfers.go  users.go  validator.go
go/gin-poc/tests/mock/: store.go
go/gin-poc/tests/test_dao/: accounts_test.go  main_test.go  store_test.go  users_test.go
java/: README.md
java/java-17-syntax/: pom.xml
java/new-kotlin/: settings.gradle.kts
java/new-kotlin/gradle/wrapper/: gradle-wrapper.properties
java/refresh-java-17/: settings.gradle.kts
java/refresh-java-17/gradle/wrapper/: gradle-wrapper.properties
kotlin/kotlin-syntax/: build.gradle.kts  settings.gradle.kts
python-rs/binding/: Makefile  README.md  pyproject.toml  shopping_cart.py  tasks.py
python-rs/binding/prime_finder/: __init__.py  python_code.py
python-rs/binding/src/: lib.rs
python-rs/binding/src/find_prime_funcs/: functions.rs
python-rs/binding/tests/: test_cart.py  test_find_prime.py
python-rs/binding/tests/features/: cart.feature
python-rs/devops-poc/: pyproject.toml
python-rs/syntax-sugar/: Makefile
python-rs/syntax-sugar/concurrency/: async_intro.py
python-rs/syntax-sugar/leetcode/: count_paths.py
python-rs/syntax-sugar/socket_programming/: server.py
python-rs/syntax-sugar/tests/unit/: test_buddy_string.py  test_largest_volume_size.py  test_palindrone_number.py  (+4 more)
python/binding/: Cargo.toml  Makefile  main.py  pyproject.toml
python/binding/prime_finder/: __init__.py  python_code.py
python/binding/src/: lib.rs
python/binding/src/my_classes/: mod.rs  rust_class.rs
python/binding/src/syntax/: loops.rs
python/python-rust-binding/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
python/python-rust-binding/models/digit_recognition/: model.pkl
python/python-rust-binding/scripts/: ann.py  gradient.py  linear_regression.py  logistic_regression.py  pytorch_basics.py
python/python-rust-binding/src/: main.rs
python/python-rust-binding/src/helper/: data_types.rs  mod.rs  utils.rs
python/syntax-sugar/: pyproject.toml
python/syntax-sugar/concurrency/: concurrent_loop.py
python/syntax-sugar/leetcode/: demo_mapreduce.py
python/syntax-sugar/socket_programming/: client.py
python/syntax-sugar/tests/unit/: test_array_running_sum.py  test_longest_common_prefix.py  test_non_decreasing_array.py  test_reverse_integer.py  test_square_root.py
rust/accelerate-ai/: Cargo.toml
rust/rust-poc/: Cargo.toml  Makefile
rust/rust-poc/src/: main.rs
src/coding/: data_frame.go  medium_sorted_arrays.go
src/solid_examples/: 2-open-closed.go  4-interface_segregation.go  5-dependency_inversion.go
tests/coding_tests/data/: cpi_from_1980.csv
tests/construction_tests/: factories_test.go
tests/godog_tests/: scenario_1_test.go  scenario_2_test.go
tests/regular_tests/: interface_test.go
tests/solid_examples_tests/: solid_tests.go
ts/chatroom/: .gitignore
ts/react-essential-1/: package-lock.json  package.json
ts/react-essential-1/src/: App.tsx
ts/react-essential-2/: package-lock.json  package.json
typescript/hello-react-ts/: package-lock.json  package.json
typescript/hello-react-ts/src/: App.tsx
typescript/react-essential-1/public/: index.html
typescript/react-essential-1/src/: winning-combinations.ts
(+78 files in other folders)
