[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rust-binding-poc"
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "rust-binding-poc"
version = "0.1.0"
description = "rust binding example"
authors = []
include = ["prime_finder"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
httpx = "^0.27.2"
fastapi = "^0.115.3"
uvloop = "^0.21.0"
uvicorn = "^0.32.0"
openai = "^1.52.2"
langgraph = "^0.2.44"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
pytest-cov = "^6.0.0"
transformers = "^4.46.2"
datasets = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
jupyter = "^1.1.1"
invoke = "^2.2.0"
pytest-bdd = "^7.3.0"
black = "^24.10.0"
