[tool.poetry]
name = "devops-poc"
version = "0.1.0"
description = "devops poc"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
kopf = "^1.37.2"
kapitan = "^0.34.1"
kubernetes = "^31.0.0"


[tool.poetry.group.dev.dependencies]
testcontainers = "^4.8.2"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
