[package]
name = "gnn-extension"
version = "0.1.0"
edition = "2021"

[lib]
name = "gnn_extension"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["macros", "chrono"] }
rand = "0.8.5"
time = "0.3.28"
tokio = { version = "1.20.1", features = ["full"] }

[dev-dependencies]
pyo3 = { version = "0.19.2", default-features = false, features = ["macros", "chrono"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
