[build-system]
requires = ["maturin>=1"]
build-backend = "maturin"

[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = "Neural Network Implementation Exercises"
authors = ["Liusha He"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
transformers = "^4.31.0"
feature-engine = "^1.6.1"
nltk = "^3.8.1"
sktime = "^0.21.0"
mlflow = "^2.5.0"
torch = "<2.0.0"
torch-geometric = "^2.3.1"
dask = "^2023.8.1"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
statsmodels = "^0.14.0"
arch = "^6.1.0"
scipy = "^1.11.2"
lightning = "^2.0.7"
torchvision = "<1.15.2"
tensorboard = "^2.14.0"
pydot = "^1.4.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
jupyter = "^1.0.0"
notebook = "^7.0.2"

[tool.maturin]
python-source = "pysrc"
