[tool.poetry]
name = "programming_paradigms"
version = "0.1.0"
description = ""
authors = ["Liusha"]

[tool.poetry.dependencies]
python = ">3.8,<3.11"
requests = "^2.28.1"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-async = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
